# vktools

./: .gitignore  README.md  __init__.py  example.py  pyproject.toml  setup.py  vk_api_tools.py  vktools.py
examples/: delete_keyboard.py  keyboard_example.py  template_example.py
vktools/: __init__.py  keyboard.py  template.py
vktools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
