[tool.poetry]
name = "vktools"
version = "1.0.1"
description = "https://github.com/Fsoky/vktools"
readme = "README.md"
authors = ["Fsoky <cyberuest0x12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
